--- a/style.css
+++ b/style.css
@@ -1,10 +1,19 @@
 :root {
     --dark-blue: #363f5f;
+    --green: #49aa26;
+    --light-green: #3dd705;
+    --red: #e92929;
 }
+
 * {
     margin: 0;
     padding: 0;/*preenchimento interno*/
     box-sizing: border-box;
+}
+
+/*100% de px = 16px*/
+html {
+    font-size: 93.75%; /*15px */
 }
 
 body {
@@ -12,11 +21,78 @@ body {
     font-family: "Poppins", sans-serif;
 }
 
+/*tricks css, tem mais dicas no site, este caso aqui é para ocultar da tela sem afetar o leitor da tela*/
+.sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border-width: 0;
+}
+
 .container {
     width: min(90vw, 800px); /*largura com responsividade*/
     margin: auto;/*ajuste horizontal*/
 }
 /*Titles ---------------------------*/
+
+/*links an buttons*/
+a {
+    color: var(--green);
+    text-decoration: none;
+}
+
+a:hover {
+    color: var(--light-green);
+}
+
+button {
+    width: 100%;
+    height: 50px;
+
+    border: none;
+
+    color: white;
+    background: var(--green);
+
+    padding: 0%;
+
+    border-radius: 0.25rem;
+
+    cursor: pointer;
+}
+
+button:hover {
+ background: var(--light-green);
+}
+
+.button.new {
+    display: inline-block;
+    margin-bottom: .8rem;
+}
+
+.button.cancel {
+    color: var(--red);
+    border: 2px var(--red) solid;
+    border-radius: 0.25rem;
+
+    height: 50px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    opacity: 0.6;
+}
+
+.button.cancel:hover {
+    opacity: 1;
+}
+
 h2 {
     margin-top: 3.2rem;/*espaçamento em cima*/
     margin-bottom: 0.8rem;/*espaçamento embaixo*/
@@ -56,6 +132,10 @@ header {
 .card h3 {
     font-weight: normal;
     font-size: 1rem;/*tamanho da fonte*/
+    display: flex; /*deixar um elemento um ao lado do outro*/
+    align-items: center; /*deixa alinhado*/
+    justify-content: space-between;/*espaço entre os elementos*/
+
 }
 
 .card p {
@@ -66,8 +146,14 @@ header {
 }
 
 .card.total {
-    background: #49aa26;
+    background: var(--green);
     color: white;
+}
+
+#transaction {
+    display: block;
+    width: 100%;
+    overflow: auto;
 }
 /*table ---------------------------*/
 #data-table {
@@ -76,9 +162,17 @@ header {
     color: #969cb3;
 }
 
+/*Pseudo class --para arendodar as bordas no sentido horário*/
 table thead tr th:first-child,
-table tbody tr td:first-child{
+table tbody tr td:first-child
+{
     border-radius: 0.25rem 0 0 0.25rem;
+}
+
+table thead tr th:last-child,
+table tbody tr td:last-child
+{
+    border-radius: 0 0.25rem 0.25rem 0;
 }
 
 table thead th {
@@ -111,12 +205,98 @@ td.expense {
     color:red;
 }
 
+/*Modal -------------------*/
+.modal-overlay {
+    width: 100%;
+    height: 100%;
+
+    background-color: rgba(0,0,0,0.7);
+
+    position: fixed;
+    top: 0;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    opacity: 0;
+    visibility: hidden;
+
+    z-index: 999;
+}
+
+.modal-overlay.active {
+    opacity: 1;
+    visibility: visible;
+}
+
+.modal {
+    background: #f0f2f5;
+    padding: 2.4rem;/*preenchimento interno*/
+    width: 90%;
+    max-width: 500px;
+    position: relative;
+    z-index: 1;
+}
+
+/*Form -------------------*/
+
+#form {
+    max-width: 500px;
+}
+
+#form h2 {
+    margin-top: 0;
+}
+
+input {
+    border: none;
+    border-radius: 0.2rem;
+
+    padding: 0.8rem;
+
+    width: 100%;
+}
+
+.input-group {
+    margin-top: 0.8rem;
+}
+
+.input-group small {
+    opacity: 0.4;
+
+}
+
+.input-group.actions {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.input-group.actions .button,
+.input-group.actions button {
+    width: 48%;
+}
 
 /*footer ---------------------------*/
 footer {
     text-align: center;
     padding: 4rem 0 2rem;
     color: var(--dark-blue);
+
     opacity: 0.6;
 }
 
+
+/*Responsive -----------------*/
+@media (min-width: 800px) {
+    html {
+        font-size: 87.5%;
+    }
+
+    #balance {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 2rem;
+    }
+}
