--- a/style.css
+++ b/style.css
@@ -287,6 +287,12 @@ footer {
     opacity: 0.6;
 }
 
+#developer {
+    text-align: center;
+    padding: 4rem 0 25rem;
+    color: black
+}
+
 
 /*Responsive -----------------*/
 @media (min-width: 800px) {
